# gitolith

./: Cargo.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
gitolith-bin/: Cargo.toml
gitolith-cli/: Cargo.toml
gitolith-core/: Cargo.toml
gitolith-core/src/: error.rs  lib.rs
gitolith-core/src/git/: model.rs
gitolith-core/src/http/: handlers.rs  mod.rs  router.rs
src/: main.rs
