[package]
name = "gitolith-bin"
version = "0.1.0"
description = ""
authors = ["gitolith contributors <gitolith@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
documentation = "https://github.com/gitolith/gitolith/blob/master/README.md"
homepage = "https://github.com/gitolith/gitolith"
repository = "https://github.com/gitolith/gitolith"
keywords = []
categories = []
edition = "2018"

[dependencies]

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
