[package]
name = "gitolith-core"
version = "0.1.0"
description = ""
authors = ["gitolith contributors <gitolith@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
documentation = "https://github.com/gitolith/gitolith/blob/master/README.md"
homepage = "https://github.com/gitolith/gitolith"
repository = "https://github.com/gitolith/gitolith"
keywords = []
categories = []
edition = "2018"

[features]
hyper-http = ["hyper"]

[dependencies]
thiserror = "1.0.20"
hyper = { version = "0.13.8", optional = true }
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3.18"
log = "0.4.11"

[dev-dependencies]
mockito = "0.27.0"
